# falseometer

./: .gitignore  Dockerfile  Procfile  anthropomorphic_eval.py  app.py  article_analyzer.py  compose.yaml  download_linguistic_papers.py  implied_claims_eval.py  move_interesting_pdfs.py  pedant_eval.py  pyproject.toml  requirements.txt  samples.csv  suggestive_definitions.py
files/: 4hyjr
templates/: base.html  index.html  results.html
