[project]
name = "pedant-eval"
version = "0.1.0"
description = "Evaluation framework for motivated interpretation of evidence"
requires-python = ">=3.13"
dependencies = [
    "inspect-ai",
    "requests",
    "beautifulsoup4",
    "langchain-openai",
    "langchain-core",
    "python-dotenv",
    "flask>=3.1.1",
    "anthropic>=0.62.0",
    "datasets>=4.0.0",
    "arxiv>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
